--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intuition Trust Graph</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>🧠 Intuition Trust Graph Visualizer</h1>
-  <div id="graph-container">Loading trust graph...</div>
+  <div class="container">
+    <h1>🧠 Intuition Trust Graph</h1>
+    <input type="text" id="userInput" placeholder="Enter Farcaster username or wallet" />
+    <button onclick="fetchTrustData()">Generate Graph</button>
+    <div id="graphContainer"></div>
+  </div>
 
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
